test/libyul/yulSyntaxTests/switch_duplicate_case_different_literal.yul
{
	switch 0
	case 0 {}
	case "" {}
}
// ----
// DeclarationError 6792: (24-34): Duplicate case "" defined.
